Fixed bug with typing on mobile phones where cursor was always placed at the end

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -68,6 +68,7 @@ p {
     line-height: var(--inputLineHeight);
     border: 1px solid;
     border-radius: 0.4rem;
+    text-transform: lowercase;
 }
 
 #url::placeholder {
